chore: add Google Search Console verification meta tag

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="bh5s4i7SADuEnA7gnDej0TvricsHzb9O30jegMLSF9A" />
     {% seo %}
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
     <link rel="icon" href="{{ '/assets/images/favicon.ico' | relative_url }}">
